# inference-engine

./: .gitignore  MODULE.bazel
docker/: Dockerfile
inference/: BUILD  detection.h  image_info.h  inference.cpp  inference_engine.cpp  inference_engine.h  inference_params.h  non_max_suppression.cpp  non_max_suppression.h
inference/tests/: BUILD  test_inference_engine.cpp  test_non_max_suppression.cpp
