module(name = "yolo_engine")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "opencv", version = "4.11.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")
